--- a/index.html
+++ b/index.html
@@ -23,7 +23,464 @@ applyBodyTag="false"
   <apex:includeScript value="{!URLFOR($Resource.listMeAssets, 'd3/d3.min.js')}"/>
 
 </head>
+  <script type="text/javascript">
+  function setSection(to, from)
+  {
+    if (!(to.hasClass("active")))
+    {
+      if (to.is("#one")) {
+        $("#one-tab").addClass("active-tab");
+        $("#one-tab .on").css("display","initial");
+        $("#one-tab .off").css("display","none");
+      }
+      if (from.is("#one")) {
+        $("#one-tab").removeClass("active-tab");
+        $("#one-tab .off").css("display","initial");
+        $("#one-tab .on").css("display","none");
+      }
+      if (to.is("#two")) {
+        $("#two-tab").addClass("active-tab");
+        $("#two-tab .on").css("display","initial");
+        $("#two-tab .off").css("display","none");
+      }
+      if (from.is("#two")) {
+        $("#two-tab").removeClass("active-tab");
+        $("#two-tab .off").css("display","initial");
+        $("#two-tab .on").css("display","none");
+      }
+      if (to.is("#three")) {
+        $("#three-tab").addClass("active-tab");
+        $("#three-tab .on").css("display","initial");
+        $("#three-tab .off").css("display","none");
+      }
+      if (from.is("#three")) {
+        $("#three-tab").removeClass("active-tab");
+        $("#three-tab .off").css("display","initial");
+        $("#three-tab .on").css("display","none");
+      }
+      from.animate({"left":"-100%"},100,'linear')
+      to.animate({"left":"0%"},100,'linear',function() {
+        from.css("left","100%");
+        from.removeClass("active");
+        to.addClass("active");
+      });
+    }
+  }
+  $(document).ready(function(){
+    $('a').on('click', function(event) {
+      var sectionId = $(this).attr("data-section"),
+      $toSlide= $("#container section#"+sectionId),
+      $fromSlide= $('.active');
+      setSection($toSlide,$fromSlide);
+    });
+    $('.img-right').on('click', function(event) {
+      $(this).css("background","#2f92d0");
+      $(this).parent().animate({right:"-100%"}, 200).animate({height:"0px",padding:"0px",border:"0px"},200);
+    });
+    $('#one-overall .link').on('click', function(event) {
+      fromSlide= $('.active');
+      fromSlide.removeClass("active");
+      $('#one-overall').animate({left:"-100%",right:"100%"},200);
+    });
+    $('.arrow-back-button').on('click', function(event) {
+      fromSlide= $('.active');
+      fromSlide.removeClass("active");
+      $('#one-overall').animate({left:"0",right:"0"},200);
+    });
+    $('#show-add').on('click', function(event) {
+      $('#add').animate({"top":"0"}, 200);
+    });
+    $('#hide-add').on('click', function(event) {
+      $('#add').animate({"top":"100%"}, 200);
+    });
+    $('#expand-list').on('click', function(event) {
+      $('#list').animate({"opacity":"1"}, 1);
+      $('#list').animate({"top":"0"}, { queue: false, duration: 200 });
+      $('#list').animate({"left":"0"}, { queue: false, duration: 200 });
+      $('#list').animate({"bottom":"0"}, { queue: false, duration: 200 });
+      $('#list').animate({"right":"0"}, { queue: false, duration: 200 });
+    });
+    $('#hide-list').on('click', function(event) {
+      $('#list').animate({"opacity":"0"}, 200);
+      $('#list').animate({"top":"50%"}, 1);
+      $('#list').animate({"left":"50%"}, 1);
+      $('#list').animate({"bottom":"50%"}, 1);
+      $('#list').animate({"right":"50%"}, 1);
+    });
+  });
+  </script>
 <style type="text/css">
+
+  @-webkit-keyframes bugfix {
+    from { fill: 0; }
+    to { fill: 0; }
+  }
+
+  ::-webkit-scrollbar { width: 0 !important }
+
+  body {
+    font-family: ProximaNova, sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    color: #333;
+    margin: 0px;
+    padding: 0px;
+    height: 100%;
+    overflow: hidden;
+    background: #FFF;
+    -webkit-animation: bugfix infinite 1s; 
+  }
+
+  *:focus {
+    outline: none;
+  }
+
+  h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+    font-family: ProximaNova, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: #2f92d0; 
+  }
+
+  p {
+    padding: 0px;
+    margin: 0px;
+  }
+
+  strong {
+    font-family: ProximaNova, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  .header-overall {
+    height: 160px;
+    width: 100%;
+    background-image: url(http://goo.gl/W6QMrW);
+    background-size: cover;
+  }
+
+  #one-overall {
+    position: fixed;
+    z-index: 2;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    overflow: hidden;
+    background: #fff;
+  }
+
+  #add {
+    position: fixed;
+    z-index: 3;
+    top: 100%;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+  }
+
+  #list {
+    position: fixed;
+    z-index: 3;
+    opacity: 0;
+    top: 50%;
+    left: 50%;
+    right: 50%;
+    bottom: 50%;
+    background: #fff;
+  }
+
+  #container {
+    z-index: 0;
+    position: absolute;
+    top: 0px;
+    left: 300px;
+    right: 0px;
+    bottom: 0px;
+    overflow: hidden;
+    background: transparent;
+  }
+
+  #container section {
+    box-sizing: border-box;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 100%;
+  }
+
+  #container section:nth-child(1) {
+    left: 0%;
+  }
+
+  .link {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    position: relative;
+    display: block;
+    overflow: hidden;
+    color: #4d4d4d;
+    text-decoration: none;
+    text-align: left;
+    font-size: 18px;
+    padding: 20px;
+    padding-right: 0px;
+    height: 80px;
+    box-shadow: -1px -1px #cccccc;
+    border-bottom: 1px solid #cccccc;
+    background: #FFF;
+    width: 100%;
+  }
+
+  .link .img-left {
+    float: left;
+    width: 46px;
+    height: 46px;
+    margin-left: -3px;
+    margin-right: 16px;
+    margin-top: -2px;
+  }
+
+  .link .img-right {
+    float: right;
+    width: 46px;
+    height: 46px;
+    margin-left: -3px;
+    margin-right: 16px;
+    margin-top: -2px;
+  }
+
+  .img-right-main {
+    float: right;
+    width: 46px;
+    height: 46px;
+    margin-left: -3px;
+    margin-right: 16px;
+    margin-top: -2px;
+  }
+
+  .arrow-back {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 10px; 
+    height: 10px;
+    -webkit-transform: rotate(-135deg);
+    border-top: 3px solid #999;
+    border-right: 3px solid #999;
+  }
+
+  .arrow-back-button {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 40px; 
+    height: 40px;
+    background: transparent;
+  }
+
+  .arrow-right {
+    float: right;
+    margin-top: -25px;
+    width: 10px; 
+    height: 10px;
+    -webkit-transform: rotate(45deg);
+    border-top: 3px solid #cccccc;
+    border-right: 3px solid #cccccc;
+    margin-right: 25px;
+  }
+
+  .x {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 20px;
+    height: 20px;
+    padding: 17px;
+  }
+
+  .list-header {
+    margin: 7px;
+  }
+
+  .link-title {
+    padding-top: 2px;
+  }
+
+  .link-blurb {
+    color: #999999;
+    margin-top: -2px;
+    font-size: 14px;
+  }
+
+  #navbar {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 300px;
+    height: 100%;
+    z-index: 1;
+    background: #f3f3f3;
+    border-right: 1px solid #aaaaaa;
+  }
+
+  #navbar_title {
+    box-sizing: border-box;
+    display: block;
+    float: left;
+    text-decoration: none;
+    font-size: 1em;
+    color: #333;
+    padding-top: 125px;
+    padding-left: 25px;
+    width: 300px;
+    height: 225px;
+    border-bottom: 1px solid #aaaaaa;
+  }
+
+  .tab {
+    box-sizing: border-box;
+    display: block;
+    float: left;
+    text-decoration: none;
+    color: #333;
+    width: 300px;
+    height: 60px;
+    border-bottom: 1px solid #aaaaaa;
+  }
+
+  .tab img {
+    float: left;
+    height: 30px;
+    padding: 15px;
+  }
+
+  .tab span {
+    float: left;
+    margin-top: 20px;
+  }
+
+  .active-tab {
+    border-right: 5px solid #2f92d0;
+    color: #2f92d0;
+  }
+
+  .off { display: initial; }
+
+  .on { display: none; }
+
+  .question {
+    overflow: auto;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    display: block;
+    color: #4d4d4d;
+    text-decoration: none;
+    text-align: left;
+    font-size: 18px;
+    padding: 12px 0px 0px 60px;
+    background: #FFF;
+    width: 100%;
+  }
+
+  input, textarea, select {
+    font-family: ProximaNova, sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #4d4d4d;
+    width: 70%;
+    margin-top: 4px;
+    padding: 4px;
+    padding-left: 10px;
+    outline: none;
+    border: 1px solid #999999;
+    margin-right: 20%;
+    max-width: 800px;
+    background: transparent;
+    border-radius: 5px;
+    -webkit-appearance: none;
+  }
+
+  .short {
+    width: 40%;
+  }
+
+  textarea {
+    height: 150px;
+    padding-top: 10px;
+  }
+
+  select {
+    background: url("arrow-bottom.png") no-repeat right;
+    background-size: 60px 60px;
+  }
+
+  .submit {
+    position: absolute;
+    bottom: 0;
+    float: left;
+    font-family: ProximaNova, sans-serif;
+    font-weight: 500;
+    max-width: 100%;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    display: block;
+    color: #FFF;
+    text-decoration: none;
+    text-align: center;
+    font-size: 24px;
+    padding: 25px;
+    padding-bottom: 24px;
+    border-radius: 0px;
+    border: none;
+    margin: 0px;
+    background: #2f92d0;
+    width: 100%;
+  }
+
+  .blue { color: #2f92d0; }
+
+  .zoom .header-overall { height: 240px; }
+
+  .zoom .img-left {
+    width: 69px;
+    height: 69px;
+    margin-left: -4px;
+    margin-right: 24px;
+    margin-top: -4px;
+  }
+
+  .zoom .link {
+    font-size: 24px;
+    padding: 30px;
+    padding-right: 0px;
+    height: 120px;
+    box-shadow: -1px -1px #cccccc;
+  }
+
+  .zoom .list-header {
+    margin: 11px;
+    font-size: 36px;
+  }
+
+  .zoom .link-title {
+    padding-top: 3px;
+  }
+
+  .zoom .link-blurb {
+    margin-top: -3px;
+    font-size: 21px;
+  }
+
+
+  html { height: 100%; margin: 0; padding: 0;}
+
+  body { height: 100%; margin: 0; padding: 0 }
+
 .axis path,
 .axis line {
   fill: none;
@@ -43,6 +500,154 @@ applyBodyTag="false"
 </style>
 
 <body ng-controller='EventController'>
+
+
+
+
+    <div id="one-overall">
+    <div class="header-overall"></div>
+    <div class="link">
+      <h1 class="list-header"> My Events </h1>
+    </div>
+    <a class="link" data-section="one" href="#" ng-repeat="event in events">
+      <div ng-click="getActiveCustomers(event)">
+      <img class="img-left" src="{!URLFOR($Resource.listMeAssets, 'group.svg')}"/>
+      <p class="link-title"> {{event.Name}} </p>
+      <p class="link-blurb"> 3 people </p>
+      <div class="arrow-right"></div>
+     </div>
+    </a>
+    <a class="link" data-section="one" href="#">
+      <img class="img-left" src="{!URLFOR($Resource.listMeAssets, 'group.svg')}"/>
+      <p class="link-title"> Event 1 </p>
+      <p class="link-blurb"> 3 people </p>
+      <div class="arrow-right"></div>
+    </a>
+    <a class="link" data-section="one" href="#">
+      <img class="img-left" src="{!URLFOR($Resource.listMeAssets, 'group.svg')}"/>
+      <p class="link-title"> Event 2 </p>
+      <p class="link-blurb"> 103 people </p>
+      <div class="arrow-right"></div>
+    </a>
+    <a class="link" data-section="one" href="#">
+      <img class="img-left" src="{!URLFOR($Resource.listMeAssets, 'group.svg')}"/>
+      <p class="link-title"> Event 3 </p>
+      <p class="link-blurb"> 23 people </p>
+      <div class="arrow-right"></div>
+    </a>
+  </div>
+  <div id="navbar">
+    <div class="arrow-back-button">
+      <div class="arrow-back"></div>
+    </div>
+    <div id="navbar_title">
+      <p> You are now managing: <br/> <strong class="blue"> Event 1 </strong> </p>
+    </div>
+    <a id="one-tab" class="tab active-tab" data-section="one" href="#">
+      <img class="off" style="display: none" src="{!URLFOR($Resource.listMeAssets, 'waitlist.svg')}"/>
+      <img class="on" style="display: initial" src="{!URLFOR($Resource.listMeAssets, 'waitlist-alt.svg')}"/>
+      <span> Waitlist </span>
+    </a>
+    <a id="two-tab" class="tab" data-section="two" href="#">
+      <img class="off" src="{!URLFOR($Resource.listMeAssets, 'stats.svg')}"/>
+      <img class="on" src="{!URLFOR($Resource.listMeAssets, 'stats-alt.svg')}"/>
+      <span> Statistics </span>
+    </a>
+    <a id="three-tab" class="tab" data-section="three" href="#">
+      <img class="off" src="{!URLFOR($Resource.listMeAssets, 'settings.svg')}"/>
+      <img class="on" src="{!URLFOR($Resource.listMeAssets, 'settings-alt.svg')}"/>
+      <span> Settings </span>
+    </a>
+  </div>
+  <div id="container">
+    <section id="one">
+      <div class="link">
+        <img id="expand-list" class="img-right-main" src="{!URLFOR($Resource.listMeAssets, 'expand.svg')}"/>
+        <img id="show-add" class="img-right-main" src="{!URLFOR($Resource.listMeAssets, 'add.svg')}"/>
+        <h1 class="list-header"> Waitlist </h1>
+      </div>
+      <div class="link">
+        <img class="off img-left" style="display: none" src="{!URLFOR($Resource.listMeAssets, 'person.svg')}"/>
+        <img class="on img-left" style="display: initial" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
+        <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}"/>
+        <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'check.svg')}"/>
+        <p class="link-title blue"> Person 1 </p>
+        <p class="link-blurb blue"> Next! </p>
+      </div>
+      <div class="link">
+        <img class="off img-left" src="{!URLFOR($Resource.listMeAssets, 'person.svg')}"/>
+        <img class="on img-left" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
+        <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}"/>
+        <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'check.svg')}"/>
+        <p class="link-title"> Person 2 </p>
+        <p class="link-blurb"> Estimated wait time: 15 minutes </p>
+      </div>
+      <div class="link">
+        <img class="off img-left" src="{!URLFOR($Resource.listMeAssets, 'person.svg')}"/>
+        <img class="on img-left" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
+        <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}"/>
+        <img class="img-right" src="{!URLFOR($Resource.listMeAssets, 'check.svg')}"/>
+        <p class="link-title"> Person 3 </p>
+        <p class="link-blurb"> Estimated wait time: 30 minutes </p>
+      </div>
+    </section>
+    <section id="two">
+    </section>
+    <section id="three">
+    </section>
+  </div>
+  <div id="add">
+    <div class="link">
+      <img class="img-right-main" id="hide-add" src="{!URLFOR($Resource.listMeAssets, 'x.svg')}"></img>
+      <h1 class="list-header"> Add Person </h1>
+    </div>
+    <br/><br/>
+    <div class="question"> 
+      <p> Name </p>
+      <input class="short" type="text" name="text"></input>
+    </div>
+    <div class="question"> 
+      <p> Phone Number </p>
+      <input class="short" type="text" name="text"></input>
+    </div>
+    <div class="question"> 
+      <p> Email Address </p>
+      <input class="short" type="text" name="text"></input>
+    </div>
+    <div class="question"> 
+      <p> Request </p>
+      <textarea></textarea>
+    </div>
+    <input class="submit" type="button" value="Submit"></input>
+  </div>
+  <div class="zoom" id="list">
+    <div class="header-overall"></div>
+    <img class="x" id="hide-list" src="{!URLFOR($Resource.listMeAssets, 'clear-x.svg')}"></img>
+    <div class="link">
+      <h1 class="list-header"> Waitlist </h1>
+    </div>
+    <div class="link">
+      <img class="off img-left" style="display: none" src="{!URLFOR($Resource.listMeAssets, 'person.svg')}"/>
+      <img class="on img-left" style="display: initial" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
+      <p class="link-title blue"> Person 1 </p>
+      <p class="link-blurb blue"> Next! </p>
+    </div>
+    <div class="link">
+      <img class="off img-left" src="{!URLFOR($Resource.listMeAssets, 'person.svg')}"/>
+      <img class="on img-left" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
+      <p class="link-title"> Person 2 </p>
+      <p class="link-blurb"> Estimated wait time: 15 minutes </p>
+    </div>
+    <div class="link">
+      <img class="off img-left" src="{!URLFOR($Resource.listMeAssets, 'person.svg')}"/>
+      <img class="on img-left" src="{!URLFOR($Resource.listMeAssets, 'person-alt.svg')}"/>
+      <p class="link-title"> Person 3 </p>
+      <p class="link-blurb"> Estimated wait time: 30 minutes </p>
+    </div>
+  </div>
+
+
+
   <h1> List Me </h1>
   <input ng-model='test' type="date"></input>
   {{test}}
@@ -105,6 +710,9 @@ listMeApp.controller('EventController', function($scope) {
       function(result, event) {
         if (event.status) {
           $scope.customers = result;
+          console.log($("#one"));
+          setSection($("#one"), $("#one-overall"));
+          console.log($("#one"));
           $scope.$apply();
         } else if (event.type == 'exception') {
           alert('Exception: ' + event.message);
