--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ applyBodyTag="false"
       <img class="on" style="display: initial" src="{!URLFOR($Resource.listMeAssets, 'waitlist-alt.svg')}"/>
       <span> Waitlist </span>
     </a>
-    <a id="two-tab" class="tab" data-section="two" href="#">
+    <a id="two-tab" class="tab" data-section="two" href="#" ng-click="createLineGraph(currentEvent, true); createLineGraph(currentEvent, false);">
       <img class="off" src="{!URLFOR($Resource.listMeAssets, 'stats.svg')}"/>
       <img class="on" src="{!URLFOR($Resource.listMeAssets, 'stats-alt.svg')}"/>
       <span> Statistics </span>
@@ -636,33 +636,6 @@ applyBodyTag="false"
       <p class="link-blurb"> Estimated wait time: 30 minutes </p>
     </div>
   </div>
-
-
-
-  <h1> List Me </h1>
-  <input ng-model='test' type="date"></input>
-  {{test}}
-  <h2> List of Events </h2>
-  <div ng-repeat="event in events">
-    <p ng-click="getActiveCustomers(event)"> {{event.Name}} </p>
-  </div>
-  <h2> List of Customers </h2>
-  <div ng-repeat="customer in customers">
-    <p ng-click="removeCustomer($index, customer)"> {{customer.Name}} </p>
-  </div>
-  <form ng-submit="createCustomer(customer, currentEvent)">
-    <apex:repeat value="{!$ObjectType.Contact.FieldSets.ListMe}" var="f">
-    <p ng-show="{!f.Required}"> * </p> {!f.Label}: {!f.Type}
-    <input ng-model="customer.{!f.FieldPath}" ng-show="'{!f.Type}' !== 'date'" type="{!f.Type}" isRequired="{!f.Required}"/>
-    <input ng-model="customer.{!f.FieldPath}" ng-show="'{!f.Type}' == 'date'" type="{!f.Type}" isRequired="{!f.Required}"/>
-  </apex:repeat>
-
-  <button type="submit"> Submit Form </button>
-  <button type="button" ng-click="createLineGraph(currentEvent, true)"> Get line graph </button>
-  <button type="button" ng-click="createLineGraph(currentEvent, false)"> Get line graph 2</button>
-
-</form>
-
 </body>
 <script>
 var listMeApp = angular.module('listMe', []);
